# Realtime-Assistant-chainlit

./: .gitignore  Basic Architecture.pptx  Dockerfile  Notes.md  README.md  active_memory.json  app.py  personalization.json  pyproject.toml  run.txt  runtime_time_table.jsonl  sample.env
.chainlit/: config.toml
agents/: tools.py
notebooks/: openai.ipynb
prompts/: clipboard_to_file_prompt.xml  create_file_prompt.xml  describe_image_prompt.xml  realtime_instructions.xml  realtime_prompt.xml  select_file_prompt.xml  update_file_prompt.xml
public/: stylesheet.css
realtime/: __init__.py  llm.py  tools.py  utils.py
tools/: base_tool.py  clipboard_tools.py  file_tools.py  general_tools.py  image_tools.py  memory_tools.py
utils/: llm.py  memory_management.py  utils.py
